fix: 全屏视频z-index

--- a/src/styles/_device.scss
+++ b/src/styles/_device.scss
@@ -362,7 +362,7 @@
   }
   &.fullscreen, .screen-item.fullscreen {
     position: fixed;
-    z-index: 1001;
+    z-index: 1002;
     top: 0;
     left: 0;
     right: 0;
